vpc.tf
# VPC
resource "aws_vpc" "main_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "main_vpc"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = {
    Name = "main_igw"
  }
}

# Public Subnets
resource "aws_subnet" "public_subnet_1" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = var.public_subnet_cidrs[0]
  availability_zone       = var.availability_zones[0]
  map_public_ip_on_launch = true
  tags = {
    Name = "public_subnet_1"
  }
}

resource "aws_subnet" "public_subnet_2" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = var.public_subnet_cidrs[1]
  availability_zone       = var.availability_zones[1]
  map_public_ip_on_launch = true
  tags = {
    Name = "public_subnet_2"
  }
}

# Private Subnets
resource "aws_subnet" "private_subnet_1" {
  vpc_id            = aws_vpc.main_vpc.id
  cidr_block        = var.private_subnet_cidrs[0]
  availability_zone = var.availability_zones[0]
  tags = {
    Name = "private_subnet_1"
  }
}

resource "aws_subnet" "private_subnet_2" {
  vpc_id            = aws_vpc.main_vpc.id
  cidr_block        = var.private_subnet_cidrs[1]
  availability_zone = var.availability_zones[1]
  tags = {
    Name = "private_subnet_2"
  }
}

# NAT Instance
resource "aws_instance" "nat_instance" {
  ami             = data.aws_ami.nat.id
  instance_type   = "t2.micro"
  subnet_id       = aws_subnet.public_subnet_1.id
  key_name        = var.key_pair_name
  security_groups = [aws_security_group.nat_sg.id]

  tags = {
    Name = "nat_instance"
  }
}

# # Private Instance
# resource "aws_instance" "private_instance" {
#   ami             = data.aws_ami.ubuntu.id
#   instance_type   = "t2.micro"
#   subnet_id       = aws_subnet.private_subnet_1.id
#   key_name        = var.key_pair_name
#   security_groups = [aws_security_group.private_instance_sg.id]

#   tags = {
#     Name = "private_instance"
#   }
# }

# Elastic IP for NAT instance
resource "aws_eip" "nat_eip" {
  instance = aws_instance.nat_instance.id
}
